force-app/main/default/objects/Product2/fields/Area_Terapeutica__c.field-meta.xml
<CustomField>
    <fullName>Area_Terapeutica__c</fullName>
    <description>Área Terapéutica a la cual pertenece el producto</description>
    <inlineHelpText>Área Terapéutica a la cual pertenece el producto</inlineHelpText>
    <label>Área Terapéutica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Terapeutica</valueSetName>
    </valueSet>
</CustomField>