force-app/main/default/objects/Product2/fields/Bultos_Camada__c.field-meta.xml
<CustomField>
    <fullName>Bultos_Camada__c</fullName>
    <label>Bultos/Camada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>