force-app/main/default/objects/Product2/fields/Bultos_despacho__c.field-meta.xml
<CustomField>
    <fullName>Bultos_despacho__c</fullName>
    <label>Bultos/despacho</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>