force-app/main/default/objects/Product2/fields/Camadas_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Camadas_Pallet__c</fullName>
    <label>Camadas/Pallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>