force-app/main/default/objects/Product2/fields/Cantidad_Minima_Camada_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Minima_Camada_Pallet__c</fullName>
    <label>Cantidad Mínima Camada Pallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>