force-app/main/default/objects/Product2/fields/CNV_CU__c.field-meta.xml
<CustomField>
    <fullName>CNV_CU__c</fullName>
    <label>Cluster</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>