force-app/main/default/objects/Product2/fields/CNV_KG__c.field-meta.xml
<CustomField>
    <fullName>CNV_KG__c</fullName>
    <label>Kilos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>