force-app/main/default/objects/Product2/fields/CNV_LT__c.field-meta.xml
<CustomField>
    <fullName>CNV_LT__c</fullName>
    <label>Litros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>