force-app/main/default/objects/Product2/fields/CNV_LY__c.field-meta.xml
<CustomField>
    <fullName>CNV_LY__c</fullName>
    <label>Camada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>