force-app/main/default/objects/Product2/fields/CNV_PL__c.field-meta.xml
<CustomField>
    <fullName>CNV_PL__c</fullName>
    <label>Pallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>