force-app/main/default/objects/Product2/fields/CNV_TR__c.field-meta.xml
<CustomField>
    <fullName>CNV_TR__c</fullName>
    <label>Caja</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>