force-app/main/default/objects/Product2/fields/Codigo_producto_Id_externo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_producto_Id_externo__c</fullName>
    <externalId>true</externalId>
    <label>Código producto Id externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>