force-app/main/default/objects/Product2/fields/Dan360_ean13__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ean13__c</fullName>
    <label>ean13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>