force-app/main/default/objects/Product2/fields/Dan360_materialTypeId__c.field-meta.xml
<CustomField>
    <fullName>Dan360_materialTypeId__c</fullName>
    <externalId>true</externalId>
    <label>materialTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>