force-app/main/default/objects/Product2/fields/Dan360_measureUnitId__c.field-meta.xml
<CustomField>
    <fullName>Dan360_measureUnitId__c</fullName>
    <label>measureUnitId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>