force-app/main/default/objects/Product2/fields/Dan360_UnidadesPorBulto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadesPorBulto__c</fullName>
    <label>Unidades por bulto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>