force-app/main/default/objects/Product2/fields/DISTRIBUTIONCHANNEL__c.field-meta.xml
<CustomField>
    <fullName>DISTRIBUTIONCHANNEL__c</fullName>
    <label>Canal de distribución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>