force-app/main/default/objects/Product2/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <label>Edad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>