force-app/main/default/objects/Product2/fields/Es_de_Kit_de_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Es_de_Kit_de_Inicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es de Kit de Inicio</label>
    <type>Checkbox</type>
</CustomField>