force-app/main/default/objects/Product2/fields/FLAVOR__c.field-meta.xml
<CustomField>
    <fullName>FLAVOR__c</fullName>
    <label>Código de sabor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>