force-app/main/default/objects/Product2/fields/FLAVORDESC__c.field-meta.xml
<CustomField>
    <fullName>FLAVORDESC__c</fullName>
    <label>Sabor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>