force-app/main/default/objects/Product2/fields/GROSSWEIGHT__c.field-meta.xml
<CustomField>
    <fullName>GROSSWEIGHT__c</fullName>
    <label>Peso bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>