force-app/main/default/objects/Product2/fields/HEIGHT__c.field-meta.xml
<CustomField>
    <fullName>HEIGHT__c</fullName>
    <label>Altura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>