force-app/main/default/objects/Product2/fields/Id_inventory_item__c.field-meta.xml
<CustomField>
    <fullName>Id_inventory_item__c</fullName>
    <externalId>true</externalId>
    <label>Id inventory item</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>