force-app/main/default/objects/Product2/fields/Id_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Id_Salesforce__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Salesforce</label>
    <type>Text</type>
</CustomField>