force-app/main/default/objects/Product2/fields/Image_id__c.field-meta.xml
<CustomField>
    <fullName>Image_id__c</fullName>
    <label>Image id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>