force-app/main/default/objects/Product2/fields/Imagen_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Imagen_del_producto__c</fullName>
    <formula>IMAGE( Image_id__c , &apos;Imagen de producto&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen del producto</label>
    <type>Text</type>
</CustomField>