force-app/main/default/objects/Product2/fields/Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Laboratorio__c</fullName>
    <label>Laboratorio</label>
    <length>225</length>
    <type>Text</type>
</CustomField>