force-app/main/default/objects/Product2/fields/LENGTH__c.field-meta.xml
<CustomField>
    <fullName>LENGTH__c</fullName>
    <label>Largo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>