force-app/main/default/objects/Product2/fields/MATERIALGROUP__c.field-meta.xml
<CustomField>
    <fullName>MATERIALGROUP__c</fullName>
    <label>Grupo de material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>