force-app/main/default/objects/Product2/fields/MATERIALOWNER__c.field-meta.xml
<CustomField>
    <fullName>MATERIALOWNER__c</fullName>
    <label>Owner del material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>