force-app/main/default/objects/Product2/fields/MATERIALTYPEID__c.field-meta.xml
<CustomField>
    <fullName>MATERIALTYPEID__c</fullName>
    <label>Tipo de material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>