force-app/main/default/objects/Product2/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <label>Modulo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>