force-app/main/default/objects/Product2/fields/NETWEIGHT__c.field-meta.xml
<CustomField>
    <fullName>NETWEIGHT__c</fullName>
    <label>Peso neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>