force-app/main/default/objects/Product2/fields/Nombre_Alternativo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Alternativo__c</fullName>
    <description>Nombre Alternativo que se utilizará en Nutricia Siempre Juntos</description>
    <label>Nombre Alternativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>