force-app/main/default/objects/Product2/fields/Patologia__c.field-meta.xml
<CustomField>
    <fullName>Patologia__c</fullName>
    <label>Patología</label>
    <length>100</length>
    <type>Text</type>
</CustomField>