force-app/main/default/objects/Product2/fields/Peso_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Peso_Pallet__c</fullName>
    <label>Peso Pallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>