force-app/main/default/objects/Product2/fields/Presentacion__c.field-meta.xml
<CustomField>
    <fullName>Presentacion__c</fullName>
    <label>Presentación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>