force-app/main/default/objects/Product2/fields/Producto_para__c.field-meta.xml
<CustomField>
    <fullName>Producto_para__c</fullName>
    <label>Producto para</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Care</fullName>
            </value>
            <value>
                <fullName>Customer Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>