force-app/main/default/objects/Product2/fields/Producto_SAP__c.field-meta.xml
<CustomField>
    <fullName>Producto_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Producto SAP</label>
    <type>Checkbox</type>
</CustomField>