force-app/main/default/objects/Product2/fields/SALESORGANIZATIONID__c.field-meta.xml
<CustomField>
    <fullName>SALESORGANIZATIONID__c</fullName>
    <label>Organización de ventas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>