force-app/main/default/objects/Product2/fields/SHELFLIFE__c.field-meta.xml
<CustomField>
    <fullName>SHELFLIFE__c</fullName>
    <label>Vida util (días)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>