force-app/main/default/objects/Product2/fields/Siglas__c.field-meta.xml
<CustomField>
    <fullName>Siglas__c</fullName>
    <label>Siglas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>