force-app/main/default/objects/Product2/fields/SIGNATURE__c.field-meta.xml
<CustomField>
    <fullName>SIGNATURE__c</fullName>
    <label>Código de marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>