force-app/main/default/objects/Product2/fields/SIGNATUREDESC__c.field-meta.xml
<CustomField>
    <fullName>SIGNATUREDESC__c</fullName>
    <label>Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>