force-app/main/default/objects/Product2/fields/Unidad_de_medida_SAP__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_medida_SAP__c</fullName>
    <formula>IF(Unidad_de_medida__c = &apos;PC&apos;,
    &apos;PCE&apos;,
    Unidad_de_medida__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidad de medida SAP</label>
    <type>Text</type>
</CustomField>