force-app/main/default/objects/Product2/fields/Unidad_pedido__c.field-meta.xml
<CustomField>
    <fullName>Unidad_pedido__c</fullName>
    <label>Unidad pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>