force-app/main/default/objects/Product2/fields/Unidad_Redondeo__c.field-meta.xml
<CustomField>
    <fullName>Unidad_Redondeo__c</fullName>
    <label>Unidad Redondeo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>