force-app/main/default/objects/Product2/fields/Unidades_de_Kit__c.field-meta.xml
<CustomField>
    <fullName>Unidades_de_Kit__c</fullName>
    <label>Unidades de Kit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>