force-app/main/default/objects/Product2/fields/VOLUME__c.field-meta.xml
<CustomField>
    <fullName>VOLUME__c</fullName>
    <label>Volumen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>