force-app/main/default/objects/Product2/fields/VOLUMEUNIT__c.field-meta.xml
<CustomField>
    <fullName>VOLUMEUNIT__c</fullName>
    <label>Unidad de volumen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>