force-app/main/default/objects/Product2/fields/Warehouse_id__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_id__c</fullName>
    <label>Warehouse id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>