force-app/main/default/objects/Product2/fields/WEIGHTUNIT__c.field-meta.xml
<CustomField>
    <fullName>WEIGHTUNIT__c</fullName>
    <label>Peso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>