force-app/main/default/objects/Product2/fields/WIDTH__c.field-meta.xml
<CustomField>
    <fullName>WIDTH__c</fullName>
    <label>Ancho</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>