force-app/main/default/objects/Product2/listViews/Productos_AMN_SAP.listView-meta.xml
<ListView>
    <fullName>Productos_AMN_SAP</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id_SAP__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Productos AMN SAP</label>
</ListView>