force-app/main/default/objects/Product2/listViews/Todos_los_productos_ACTIVOS.listView-meta.xml
<ListView>
    <fullName>Todos_los_productos_ACTIVOS</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Codigo_producto_Id_externo__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Producto_SAP__c</columns>
    <columns>Area_Terapeutica__c</columns>
    <columns>Patologia__c</columns>
    <columns>Organizacion__c</columns>
    <columns>Producto_para__c</columns>
    <columns>Es_de_Kit_de_Inicio__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todos los productos ACTIVOS</label>
</ListView>